Show Product ui finished

--- a/app/src/main/res/layout/activity_show_product.xml
+++ b/app/src/main/res/layout/activity_show_product.xml
@@ -43,7 +43,8 @@
                 android:layout_gravity="start|center_vertical"
                 android:scaleType="fitXY"
                 android:src="@drawable/heart"
-                android:layout_margin="5dp"
+                android:layout_margin="10dp"
+
                 />
         </LinearLayout>
 
@@ -63,7 +64,7 @@
             android:scaleType="fitXY"
             android:transitionName="transition"
             android:src="@drawable/layer1"
-            
+
             />
     </LinearLayout>
 
@@ -152,6 +153,7 @@
                     />
 
                 <LinearLayout
+                    android:id="@+id/ratLinear"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/description"
@@ -184,12 +186,216 @@
                         android:numStars="5"
                         android:stepSize=".5"
                         android:isIndicator="true"
-
+                        android:rating="3"
+                        android:theme="@style/RatingBar"
                         />
 
 
 
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_below="@+id/ratLinear"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:layout_margin="10dp"
+                    android:orientation="vertical"
+                    >
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+
+                        <TextView
+                            android:id="@+id/type2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/price"
+                            android:layout_margin="5dp"
+                            android:fontFamily="@font/cairo"
+                            android:text=" كوكي "
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textDirection="ltr"
+                            android:textSize="15sp"
+
+                            />
+
+                        <TextView
+                            android:id="@+id/txt1"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/price"
+                            android:layout_margin="5dp"
+                            android:fontFamily="@font/cairo"
+                            android:text=" إسم الشركة : "
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textSize="15sp"
+
+                            />
+
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+
+                        <TextView
+                            android:id="@+id/Expired_date"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/price"
+                            android:layout_margin="5dp"
+                            android:fontFamily="@font/cairo"
+                            android:text=" 1 / 5 / 2010 "
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textDirection="ltr"
+                            android:textSize="15sp"
+
+                            />
+
+                        <TextView
+                            android:id="@+id/txt2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/price"
+                            android:layout_margin="5dp"
+                            android:fontFamily="@font/cairo"
+                            android:text=" تاريخ الانتاج : "
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textSize="15sp"
+
+                            />
+
+
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+
+                        <TextView
+                            android:id="@+id/product_date"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/price"
+                            android:layout_margin="5dp"
+                            android:fontFamily="@font/cairo"
+                            android:text=" 1 / 5 / 2010 "
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textDirection="ltr"
+                            android:textSize="15sp"
+
+                            />
+
+                        <TextView
+                            android:id="@+id/txt3"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/price"
+                            android:layout_margin="5dp"
+                            android:fontFamily="@font/cairo"
+                            android:text=" تاريخ الانتهاء : "
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textSize="15sp"
+
+                            />
+
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+
+                        <TextView
+                            android:id="@+id/size"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/price"
+                            android:layout_margin="5dp"
+                            android:fontFamily="@font/cairo"
+                            android:text="  10 قطع "
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textSize="15sp"
+
+                            />
+
+                        <TextView
+                            android:id="@+id/txt4"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/price"
+                            android:layout_margin="5dp"
+                            android:fontFamily="@font/cairo"
+                            android:text=" الحجم : "
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textSize="15sp"
+
+                            />
+
+
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+
+                        <TextView
+                            android:id="@+id/city"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/price"
+                            android:layout_margin="5dp"
+                            android:fontFamily="@font/cairo"
+                            android:text=" مصر "
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textDirection="ltr"
+                            android:textSize="15sp"
+
+                            />
+
+                        <TextView
+                            android:id="@+id/txt5"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/price"
+                            android:layout_margin="5dp"
+                            android:fontFamily="@font/cairo"
+                            android:text=" بلد المنشأ : "
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textSize="15sp"
+
+                            />
+
+
+
+                    </LinearLayout>
+                </LinearLayout>
+
 
 
             </RelativeLayout>
