--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="blue">#00acec</color>
     <color name="dark_blue">#FF067199</color>
     <color name="bgBottomNavigation">#fe485a</color>
-
+    <color name="yellow">#FFC61B</color>
     <color name="bacG">#514f4f</color>
 
 </resources>
