--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,5 +20,11 @@
         <item name="android:fontFamily">@font/cairo</item>
     </style>
 
+    <style name="RatingBar"  parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/yellow</item>
+        <item name="colorControlActivated">@color/yellow</item>
+
+    </style>
+
 
 </resources>
