--- a/app/src/main/res/layout/activity_product_.xml
+++ b/app/src/main/res/layout/activity_product_.xml
@@ -36,6 +36,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_height="40dp" />
             <ImageView
+                android:id="@+id/searchindadding"
                 android:layout_width="50dp"
                 android:src="@drawable/ic_search_black_24dp"
                 android:layout_alignParentEnd="true"
