--- a/app/src/main/res/layout/activity_show_product.xml
+++ b/app/src/main/res/layout/activity_show_product.xml
@@ -27,7 +27,7 @@
                 android:layout_width="50dp"
                 android:layout_height="30dp"
                 android:layout_gravity="start|center_vertical"
-                android:scaleType="fitXY"
+                android:scaleType="centerInside"
                 android:layout_margin="5dp"
                 android:src="@drawable/ic_arrow_back_black_24dp"
                 />
@@ -38,10 +38,10 @@
                 />
             <ImageView
                 android:id="@+id/fav"
-                android:layout_width="30dp"
+                android:layout_width="50dp"
                 android:layout_height="30dp"
                 android:layout_gravity="start|center_vertical"
-                android:scaleType="fitXY"
+                android:scaleType="centerInside"
                 android:src="@drawable/heart"
                 android:layout_margin="10dp"
 
@@ -417,9 +417,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <Button
+    <Spinner
+        android:id="@+id/type_spinner2"
         android:layout_width="match_parent"
-        android:text=" العدد  2"
         android:layout_gravity="center"
         android:textColor="@android:color/white"
         android:background="@color/dark_blue"
@@ -427,10 +427,10 @@
         android:fontFamily="@font/cairo"
         android:layout_weight="2"
         android:textSize="20sp"
+        android:textAlignment="center"
         />
 
     <Button
-
         android:layout_width="match_parent"
         android:text="إضافة الي السلة "
         android:layout_gravity="center"
