--- a/app/src/main/res/layout/main_page_frag_layout.xml
+++ b/app/src/main/res/layout/main_page_frag_layout.xml
@@ -34,6 +34,7 @@
 
 
             <ImageView
+                android:id="@+id/search_image"
                 android:layout_width="300dp"
                 android:layout_gravity="center"
                 android:src="@drawable/search"
