--- a/app/src/main/res/layout/signin_layout.xml
+++ b/app/src/main/res/layout/signin_layout.xml
@@ -47,8 +47,10 @@
 
                     android:layout_width="180dp"
                     android:layout_marginStart="20sp"
-                    android:src="@drawable/shotcart"
+                    android:src="@drawable/ic_lrahtk"
                     android:layout_alignParentStart="true"
+                    android:scaleType="fitXY"
+                    android:padding="5dp"
                     android:layout_height="80dp" />
 
                 <TextView
