--- a/app/src/main/res/layout/signup_layout.xml
+++ b/app/src/main/res/layout/signup_layout.xml
@@ -48,7 +48,9 @@
                 <ImageView
                     android:layout_width="180dp"
                     android:layout_marginStart="20sp"
-                    android:src="@drawable/shotcart"
+                    android:src="@drawable/ic_lrahtk"
+                    android:scaleType="fitXY"
+                    android:padding="5dp"
                     android:layout_alignParentStart="true"
                     android:layout_height="80dp" />
 
