--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+   >
 
 
     <item
@@ -22,14 +22,14 @@
         />
 
     <item
-
+        android:id="@+id/search"
         android:enabled="true"
         android:icon="@drawable/ic_search_black_24dp"
         android:title="بحث"
         />
 
     <item
-
+        android:id="@+id/navigation_drawer"
         android:enabled="true"
         android:icon="@drawable/ic_department"
         android:title="الأقسام"
