--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,17 +14,28 @@
 
 
 
+
+
     <style name="HintText" parent="TextAppearance.Design.Hint">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/blue</item>
         <item name="android:fontFamily">@font/cairo</item>
     </style>
 
+
+
     <style name="RatingBar"  parent="Theme.AppCompat">
         <item name="colorControlNormal">@color/yellow</item>
         <item name="colorControlActivated">@color/yellow</item>
 
+
     </style>
 
+    <style name="tab_text" parent="@android:style/TextAppearance.Widget.TabWidget">
+
+        <item name="android:fontFamily">@font/cairo</item>
+
+        <item name="android:textSize">12sp</item>
+    </style>
 
 </resources>
