--- a/app/src/main/res/layout/activity_product_.xml
+++ b/app/src/main/res/layout/activity_product_.xml
@@ -24,29 +24,34 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:layout_height="match_parent">
-            
-            
-            
-            
+
+
+
+
             <ImageView
-                android:id="@+id/backhome"
+                android:id="@+id/Back"
                 android:layout_width="50dp"
-                android:scaleType="fitXY"
+                android:layout_height="30dp"
+                android:layout_gravity="start|center_vertical"
+                android:scaleType="centerInside"
+                android:layout_margin="5dp"
                 android:src="@drawable/ic_arrow_back_black_24dp"
-                android:layout_alignParentStart="true"
-                android:layout_height="40dp" />
+                />
+
             <ImageView
                 android:id="@+id/searchindadding"
                 android:layout_width="50dp"
                 android:src="@drawable/ic_search_black_24dp"
                 android:layout_alignParentEnd="true"
-                android:layout_height="50dp" />
+                android:layout_height="50dp"
+                android:scaleType="centerInside"
+                android:layout_margin="10dp"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:fontFamily="@font/cairo"
                 android:textColor="@color/blue"
-                android:textSize="22sp"
                 android:gravity="center_horizontal"
                 android:text="الألبان"
                 android:layout_centerInParent="true"
