--- a/app/src/main/res/layout/myorder_fragment.xml
+++ b/app/src/main/res/layout/myorder_fragment.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<FrameLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-   android:background="@color/bacG"
     android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rec_order"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
+</FrameLayout>
