--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="bgBottomNavigation">#fe485a</color>
     <color name="yellow">#FFC61B</color>
     <color name="bacG">#514f4f</color>
+    <color name="color3">#45C4C4C4</color>
 
 </resources>
