--- a/app/src/main/res/layout/activity_product_.xml
+++ b/app/src/main/res/layout/activity_product_.xml
@@ -52,7 +52,7 @@
                 android:layout_width="wrap_content"
                 android:fontFamily="@font/cairo"
                 android:textColor="@color/blue"
-                android:gravity="center_horizontal"
+                android:gravity="center_horizontal|center_vertical"
                 android:text="الألبان"
                 android:layout_centerInParent="true"
                 android:layout_height="match_parent" />
