--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -16,6 +16,7 @@
         android:title="العروض"
         />
     <item
+        android:id="@+id/basket"
         android:enabled="true"
         android:icon="@drawable/ic_shopping_cart"
         android:title="مشتريات"
