--- a/app/src/main/res/layout/activity_my_personal_page.xml
+++ b/app/src/main/res/layout/activity_my_personal_page.xml
@@ -32,19 +32,21 @@
                     <ImageView
                         android:id="@+id/backhome"
                         android:layout_width="50dp"
-                        android:layout_marginTop="5dp"
-                        android:scaleType="fitXY"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="start|center_vertical"
+
+                        android:scaleType="centerInside"
+                        android:layout_margin="5dp"
                         android:src="@drawable/ic_arrow_back_black_24dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_height="40dp" />
+                        />
 
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:fontFamily="@font/cairo"
                         android:textColor="#767373"
-                        android:textSize="22sp"
-                        android:gravity="center_horizontal"
+
+                        android:gravity="center_horizontal|center_vertical"
                         android:text="تفاصيل الحساب"
                         android:layout_centerInParent="true"
                         android:layout_height="match_parent" />
