--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -68,6 +68,7 @@
                 app:tabSelectedTextColor="@color/blue"
                 app:tabTextColor="#a9a5a5"
                 app:tabTextAppearance="@style/tab_text"
+                android:layout_marginEnd="10dp"
                 />
 
         </LinearLayout>
@@ -80,6 +81,7 @@
             android:layout_below="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
 
 
         </FrameLayout>
