payFragment and atherFragment finished

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/replacetest"
     android:layoutDirection="ltr"
     tools:context="com.alaa.microprocess.lrahtk.View.Splash">
 
