--- a/app/src/main/res/layout/fragment_get_started.xml
+++ b/app/src/main/res/layout/fragment_get_started.xml
@@ -115,15 +115,17 @@
 
 
     <Button
+
         android:id="@+id/btn_start"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@color/blue"
+        android:background="@drawable/rectangle_btn_background"
         android:textSize="25sp"
         android:text="@string/getstarted"
         android:textColor="@color/white"
         android:fontFamily="@font/montserrat"
         android:layout_alignParentBottom="true"
+        android:elevation="8dp"
 
         />
 
