--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,9 @@
 
 
 
+    <style name="flatbutton" parent="Widget.AppCompat.Button.Borderless">
+
+    </style>
 
 
     <style name="HintText" parent="TextAppearance.Design.Hint">
