--- a/app/src/main/res/layout/suring_paying_layout.xml
+++ b/app/src/main/res/layout/suring_paying_layout.xml
@@ -4,14 +4,15 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
 
-    
-    
-    
+
+
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_marginBottom="50dp"
         android:layoutDirection="ltr"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/linearbutton"
+        >
 
 
 
@@ -250,36 +251,38 @@
 
 
     </ScrollView>
-    
-    
-    
-    
-    
+
+
+
+
+
 
 
     <LinearLayout
+        android:id="@+id/linearbutton"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_marginStart="20sp"
         android:orientation="vertical"
-        android:layout_marginEnd="20sp"
         android:layout_height="wrap_content">
 
 
 
 
 
-        <TextView
+
+
+        <Button
+            android:id="@+id/sure"
             android:layout_width="match_parent"
-            android:gravity="center"
-            android:text="شحن الأن"
-            android:drawableEnd="@drawable/ic_backintextview"
-            android:fontFamily="@font/cairo"
-            android:paddingEnd="20sp"
-            android:textColor="@color/white"
+            android:layout_height="80dp"
+            android:background="@drawable/rectangle_btn_background"
             android:textSize="20sp"
-            android:background="@drawable/ather_button_style"
-            android:layout_height="50dp" />
+            android:text="@string/confirm"
+            android:textColor="@color/white"
+            android:fontFamily="@font/cairo"
+            android:elevation="8dp"
+
+            />
 
 
     </LinearLayout>
