--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color3"
+    android:layoutDirection="ltr"
     tools:context="com.alaa.microprocess.lrahtk.View.Pay">
 
 
